# ace-compiler

./: .gitignore  .scanignore  Dockerfile  README.md  build_cmplr.sh  conv.py  requirements.txt
ace-compiler/air-infra/core/: CMakeLists.txt
ace-compiler/fhe-cmplr/cg/: CMakeLists.txt
ace-compiler/fhe-cmplr/poly/: CMakeLists.txt
ace-compiler/nn-addon/driver/: CMakeLists.txt
ace-compiler/nn-addon/opt/: CMakeLists.txt
air-infra/: .aci.yml  CMakeLists.txt  README.md  config.in  package.cmake.in
air-infra/.aci/: .package.aci.yml  .regex.aci.yml  .test.e2e.aci.yml  .test.options.aci.yml  .test.sync.aci.yml  check.option.aci.yml
air-infra/.aci/dockerfile/: daily.Dockerfile  testCase.sh
air-infra/.aci/metadata/: aci-metadata.yml  app.aci-metadata.yml
air-infra/base/: CMakeLists.txt
air-infra/base/example/: eg_meta_info.cxx
air-infra/base/src/: arena.cxx  container.cxx  meta_info.cxx  node.cxx  node_data.cxx  op_stats.cxx  spos.cxx  st.cxx  st_attr.cxx  st_const.cxx  st_data.cxx  st_iter.cxx  st_misc.cxx  st_sym.cxx  st_type.cxx  targ_info.cxx
air-infra/base/unittest/: ut_const.cxx  ut_container.cxx  ut_st.cxx  ut_type.cxx
air-infra/benchmark/: CMakeLists.txt
air-infra/cg/: CMakeLists.txt
air-infra/cg/example/: eg_aircg_01.cxx
air-infra/cg/src/: asm_emit_ctx.cxx  cgir_container.cxx  emit_c_ctx.cxx  isa_core.cxx  live_interval.cxx  live_interval_builder.cxx  option.yml
air-infra/cg/test/: test_air2cgir_demo.cxx  test_air2cgir_demo_air.inc  test_aircg_demo_isa.cxx  test_aircg_demo_isa.h  test_lsra.cxx
air-infra/cg/unittest/: ut_air2cg_ctx.cxx  ut_air2cg_ti.h  ut_air2cg_util.h  ut_loop_info.cxx
air-infra/cmake/: function_common.cmake  function_extralib.cmake  function_library.cmake
air-infra/cmake/modules/: benchmark.cmake  gperftools.cmake  jsoncpp.cmake  unittest.cmake
air-infra/core/src/: opcode.cxx
air-infra/devtools/: .mypy.ini  README.md  check_coding_style.py
air-infra/devtools/err_msg/: err_msg.py  err_msg.yml  user_define.yml
air-infra/devtools/hooks/: .commit-template.txt  commit-msg  install-hooks.sh  prepare-commit-msg
air-infra/devtools/option/: option.yml
air-infra/doc/: Attribute.md  CodeGen.md  CommandLineOption.md  Doxyfile.in  IRTraverse.md  MemoryPool.md  PassManager.md  PipelineACI.md  SETUP.md  basic.h  header.html
air-infra/doc/html/: AIRContainer.html  CodeGen.html  PassManager.html  PipelineACI.html
air-infra/driver/: CMakeLists.txt
air-infra/driver/example/: eg_airdriver_02.cxx  eg_nndriver_standalone.cxx
air-infra/driver/include/: nn2a_driver.h
air-infra/driver/src/: common_config.cxx  driver.cxx  driver_ctx.cxx  global_config.cxx  nn2a_driver.cxx
air-infra/driver/unittest/: ut_driver.cxx
air-infra/irgen/: CMakeLists.txt
air-infra/irgen/od/: README.md  __init__.py  domain.py  odgen.py  op.py  parser.py  property.py  type.py
air-infra/irgen/td/: tabgen.py
air-infra/opt/: CMakeLists.txt
air-infra/opt/include/: ssa_rename_ctx.h  ssa_rename_handler.h  ssa_rename_stack.h  ssa_simple_builder.h  ssa_verify_ctx.h
air-infra/opt/src/: bb.cxx  dfg_node.cxx  dom.cxx  hssa_expr.cxx  loop_info.cxx  opt.cxx  scc_container.cxx  scc_node.cxx  ssa_build.cxx  ssa_container.cxx  ssa_node.cxx  ssa_st.cxx  ssa_verify.cxx
air-infra/opt/test/: test_airopt_01.cxx  test_ssa_build.cxx
air-infra/plugin/: CMakeLists.txt
air-infra/plugin/dsl_pybind11/: CMakeLists.txt  README.md  add_vector_demo.cxx  domain_op.md  setup.py
air-infra/plugin/src/: pybind11.cxx  pycapi.cxx  pyrun.cxx
air-infra/plugin/unittest/: pybase.py  pyrun.cxx
air-infra/test/: CMakeLists.txt
air-infra/test/test/: test_air.cxx
air-infra/util/: CMakeLists.txt
air-infra/util/example/: eg_airutil_timing.cxx
air-infra/util/src/: error.cxx  file_map.cxx  option.cxx  perf.cxx  timing.cxx
air-infra/util/test/: air_debug.cxx  air_trace.cxx  cmplr_usr_msg.cxx
air-infra/util/unittest/: air_allocator.cxx  mem_pool.cxx  option.cxx  ptr_util.cxx  ut_tar_reader.cxx  ut_timing.cxx
fhe-cmplr/: .aci.yml  .gitignore  CMakeLists.txt
fhe-cmplr/.aci/: .package.aci.yml  .regex.aci.yml  .test.e2e.aci.yml  .test.options.aci.yml
fhe-cmplr/.aci/dockerfile/: daily.Dockerfile  testCase.sh
fhe-cmplr/benchmark/: CMakeLists.txt
fhe-cmplr/cg/unittest/: ut_cg.cxx
fhe-cmplr/ckks/: CMakeLists.txt
fhe-cmplr/ckks/config/: option.yml
fhe-cmplr/ckks/include/: ckks_cost_model.h  dfg_region_builder.h  dfg_region_container.h  min_cut_region.h  resbm_ctx.h  scale_manager.h  sm.h  smo_bootstrap_inserter.h
fhe-cmplr/ckks/od/: master  opcode_def.yml
fhe-cmplr/ckks/src/: ckks.cxx  ckks2c_mfree.cxx  ckks_cost_model.cxx  ckks_gen.cxx  ckks_opcode.cxx  ckks_py_airgen.cxx  ckks_stats.cxx  config.cxx  dfg_region_builder.cxx  fusion_pass.cxx  pass.cxx  resbm.cxx  resbm_ctx.cxx  resbm_scale_mgr.cxx  scale_manager.cxx  skip_lowering.cxx  sm.cxx  (+1 more)
fhe-cmplr/cmake/: function_option.cmake  function_rtlibrary.cmake
fhe-cmplr/core/: CMakeLists.txt
fhe-cmplr/doc/: BUILD.md  CKKS_FUSION_PASS.md  CkksOpDesc.md  HPOLY_LPOLY_IR.md  PolyOpDesc.md  RESBM.md  SETUP.md  SM_FIXED_ANCHOR.md
fhe-cmplr/driver/: CMakeLists.txt
fhe-cmplr/opt/: CMakeLists.txt
fhe-cmplr/rtlib/: CMakeLists.txt
fhe-cmplr/sihe/: CMakeLists.txt
fhe-cmplr/test/: ace_compile.py  ace_perf.py  ace_util.py  cgo25_ae.py  oopsla25_ae.py  result_diff.py  run_accuracy.py  run_perf.py  test_bts_rescale.sh
fhe-cmplr/tool/: encode.inc
fhe-cmplr/util/: CMakeLists.txt
nn-addon/: .aci.yml  CMakeLists.txt  README.md  package.cmake.in
nn-addon/.aci/: .package.aci.yml  .regex.aci.yml  .test.e2e.aci.yml  .test.options.aci.yml  .test.sync.aci.yml  check.lib.aci.yml  check.option.aci.yml
nn-addon/benchmark/: CMakeLists.txt
nn-addon/cmake/: function_extralib.cmake  function_library.cmake
nn-addon/core/: CMakeLists.txt
nn-addon/doc/: BUILD.md  Doxyfile.in  tensor-sharding.md
nn-addon/llama/: CMakeLists.txt
nn-addon/onnx/: CMakeLists.txt
nn-addon/onnx2air/: CMakeLists.txt
nn-addon/test/: CMakeLists.txt  test_mask_fusion.sh
nn-addon/util/: CMakeLists.txt
nn-addon/vector/: CMakeLists.txt
(+1159 files in other folders)
